--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,8 +2,8 @@
 nodaemon=true
 
 [program:backend]
-command=/home/ubuntu/misp-sighting-server/back-end/kvrocks/build/kvrocks -c /home/ubuntu/misp-sighting-server/back-end/kvrocks/kvrocks.conf&
+command=../back-end/kvrocks/build/kvrocks -c /home/ubuntu/misp-sighting-server/back-end/kvrocks/kvrocks.conf&
 
 
 [program:frontend]
-command=cd /home/ubuntu/misp-sighting-server/bin/ && python3 sighting-server.py 
+command=python3 sighting-server.py
