--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:backend]
-command=../back-end/kvrocks/build/kvrocks -c /home/ubuntu/misp-sighting-server/back-end/kvrocks/kvrocks.conf&
+command=/home/ubuntu/misp-sighting-server/back-end/kvrocks/build/kvrocks -c /home/ubuntu/misp-sighting-server/back-end/kvrocks/kvrocks.conf
 
 
 [program:frontend]
