--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,4 +9,4 @@ command=/home/ubuntu/misp-sighting-server/back-end/kvrocks/build/kvrocks -c /hom
 
 
 [program:frontend]
-command=python3 sighting-server.py
+command=/usr/bin/python3 sighting-server.py
