--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,12 +1,14 @@
 [supervisord]
-logfile=/var/log/supervisord.log
-loglevel=debug
-silent=true
 nodaemon=true
 
 [program:backend]
-command=/home/ubuntu/misp-sighting-server/back-end/kvrocks/build/kvrocks -c /home/ubuntu/misp-sighting-server/back-end/kvrocks/kvrocks.conf
-
+command=build/kvrocks -c kvrocks/kvrocks.conf
+stdout_logfile=/home/ubuntu/misp-sighting-server/backend.log
+startsecs=10
+directory=/home/ubuntu/misp-sighting-server/back-end/kvrocks
 
 [program:frontend]
 command=/usr/bin/python3 sighting-server.py
+stdout_logfile=/home/ubuntu/misp-sighting-server/frontend.log
+startsecs=10
+directory=/home/ubuntu/misp-sighting-server/bin
