first working state

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,10 +2,10 @@
 nodaemon=true
 
 [program:backend]
-command=build/kvrocks -c kvrocks/kvrocks.conf
+command=/home/ubuntu/misp-sighting-server/back-end/kvrocks/build/kvrocks -c /home/ubuntu/misp-sighting-server/back-end/kvrocks/kvrocks.conf
 stdout_logfile=/home/ubuntu/misp-sighting-server/backend.log
 startsecs=10
-directory=/home/ubuntu/misp-sighting-server/back-end/kvrocks
+
 
 [program:frontend]
 command=/usr/bin/python3 sighting-server.py
