--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,13 +2,16 @@
 nodaemon=true
 
 [program:backend]
-command=/home/ubuntu/misp-sighting-server/back-end/kvrocks/build/kvrocks -c /home/ubuntu/misp-sighting-server/back-end/kvrocks/kvrocks.conf
-stdout_logfile=/home/ubuntu/misp-sighting-server/backend.log
+command=/home/ubuntu/misp-sighting-server/back-end/kvrocks/build/kvrocks -c /home/ubuntu/misp-sighting-server/volume/config/kvrocks.conf
+stdout_logfile=/home/ubuntu/misp-sighting-server/volume/logs/backend.log
+stderr_logfile=/home/ubuntu/misp-sighting-server/volume/logs/backend.log
 startsecs=10
 
-
+#/home/ubuntu/misp-sighting-server/volume/kvrocks_db
 [program:frontend]
 command=/usr/bin/python3 sighting-server.py
 stdout_logfile=/home/ubuntu/misp-sighting-server/frontend.log
 startsecs=10
+stdout_logfile=/home/ubuntu/misp-sighting-server/volume/logs/frontend.log
+stderr_logfile=/home/ubuntu/misp-sighting-server/volume/logs/frontend.log
 directory=/home/ubuntu/misp-sighting-server/bin
